translatable/tests/integration/context/fail_invalid_base_path.stderr
error: A translation with the path 'hello::formal' could not be found
 --> tests/integration/context/fail_invalid_base_path.rs:3:1
  |
3 | #[translation_context(base_path = hello)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `translation_context` (in Nightly builds, run with -Z macro-backtrace for more info)
