translatable/tests/integration/context/fail_invalid_base_path.rs
use translatable::translation_context;

#[translation_context(base_path = hello)]
struct Context {
    formal: String,
    informal: String
}

fn main() {}
